dhc-fe-dev/admin-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-web
  namespace: dhc-fe-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-web
  template:
    metadata:
      labels:
        app: admin-web
    spec:
      containers:
        - name: admin-web
          image: sungjujjang/admin_web:20260916-233412
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: admin-web-service
  namespace: dhc-fe-dev
spec:
  selector:
    app: admin-web
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: admin-web-ingress
  namespace: dhc-fe-dev
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`dhc-fe-dev-admin-web.sungju.xyz`)
      services:
        - name: admin-web-service
          port: 80
