dhc-fe-dev/user-pwa.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-pwa
  namespace: dhc-fe-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-pwa
  template:
    metadata:
      labels:
        app: user-pwa
    spec:
      containers:
        - name: user-pwa
          image: sungjujjang/user_pwa:20260916-155111
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: user-pwa-service
  namespace: dhc-fe-dev
spec:
  selector:
    app: user-pwa
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: user-pwa-ingress
  namespace: dhc-fe-dev
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`dhc-fe-dev-user-pwa.sungju.xyz`)
      services:
        - name: user-pwa-service
          port: 80
